@@ -1,3 +1,6 @@
+2015-03-04 Bruce Dubbs <bdubbs@linuxfromscratch.org>
+   * Add uninstall for rpcbind
+
 2015-02-09 Bruce Dubbs <bdubbs@linuxfromscratch.org>
    * Fix nfs-client and nfs-server for recent nfs-utils
 
